--- a/WebContent/1.Test/layoutTest4.html
+++ b/WebContent/1.Test/layoutTest4.html
@@ -23,11 +23,12 @@
      }
      .box02{
         float: right;
+        
      }
 
      .box03{
         clear:both;
-        float:left;
+        position: left bottom;
      }
      .box04{
         float:right;
